src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwU-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    default-column-width {  }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 800 × 600, states: []

post-map configures:
size: 1256 × 696, bounds: 1256 × 696, states: [Activated]
